Cambios, no funciona, detecta siempre 1

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -29,7 +29,7 @@ all: DHT22.axf
 DHT22.axf: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MCU Linker'
-	arm-none-eabi-gcc -nostdlib -L"C:\Users\nicol\git\teclado_tds\lpc_chip_175x_6x\Debug" -Xlinker -Map="DHT22.map" -Xlinker --cref -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m3 -mthumb -T "DHT22_Debug.ld" -o "DHT22.axf" $(OBJS) $(USER_OBJS) $(LIBS)
+	arm-none-eabi-gcc -nostdlib -L"E:\TD2\Wspace18-9-19\lpc_chip_175x_6x\Debug" -Xlinker -Map="DHT22.map" -Xlinker --cref -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m3 -mthumb -T "DHT22_Debug.ld" -o "DHT22.axf" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 	$(MAKE) --no-print-directory post-build
